--- a/HomeMatic Control/Todo.txt
+++ b/HomeMatic Control/Todo.txt
@@ -1,7 +1,7 @@
-- Save peers in seperate databases
+- Save peers in seperate table
 - Central: Pairing by serial
 - Device: Pairing by serial
 - Central: Is configuration sent to device after inserting batteries?
 - Device: Don't allow pairing to two masters
-- Peer.cpp - getDeviceDescription: Add GROUP, TEAM, TEAM_TAG and TEAM_CHANNELS
+- Peer.cpp - getDeviceDescription: Add GROUP
 - Check device type and serial number on repairing
