--- a/HomeMatic Control/Todo.txt
+++ b/HomeMatic Control/Todo.txt
@@ -6,4 +6,5 @@
 - Check device type and serial number on repairing
 - RPC Server/Central: paramset_defs
 - RPC Server: Store sysinfo and handle count_from_sysinfo
-- Serialize und unserialize BidCoSQueue's service messages
+- Correctly use linksCentral: One paramset for each linked peer.
+- Support for serial numbers in putParamset and getParamset
