--- a/Todo.txt
+++ b/Todo.txt
@@ -1,10 +1,12 @@
 - Central: Pairing by serial
 - Device: Pairing by serial
-- Central: Is configuration sent to device after inserting batteries?
+- Central: Is configuration sent to device after inserting batteries? / Handle device start up
 - Device: Don't allow pairing to two masters
 - Peer.cpp - getDeviceDescription: Add GROUP
+- Peer.cpp - getLinks: Process flag GL_FLAG_GROUP
 - Check device type and serial number on repairing
 - RPC Server/Central: paramset_defs
 - RPC Server: Store sysinfo and handle count_from_sysinfo
 - Correctly use linksCentral: One paramset for each linked peer.
 - Support for serial numbers in putParamset and getParamset
+- Delete peer from all devices it is linked to, when peer is reset
