--- a/Todo.txt
+++ b/Todo.txt
@@ -12,4 +12,5 @@
 - Delete peer from all devices it is linked to, when peer is reset
 - Delete metadata for all channels when peer is deleted
 - For some reason the shutter contact link parameter set is not shown in the HomeMatic configurator
+- Address specific mutexes in BidCoSPacketManager
 Today:
