--- a/Todo.txt
+++ b/Todo.txt
@@ -6,5 +6,9 @@
 - Delete peer from all devices it is linked to, when peer is reset
 - If device support teams detect teams through peer request on pairing:
 		1374684305216 Received: 0B04A0011C69431D18490103
-		1374684305348 Received: 1204A0101D18491C6943011C295C0100000000 (1C295C:01 is team) 
+		1374684305348 Received: 1204A0101D18491C6943011C295C0100000000 (1C295C:01 is team)
+- Add "functions"
 Today:
+
+Questions:
+- How are smoke detector packets timed?
