--- a/Todo.txt
+++ b/Todo.txt
@@ -7,10 +7,9 @@
 - If device support teams detect teams through peer request on pairing:
 		1374684305216 Received: 0B04A0011C69431D18490103
 		1374684305348 Received: 1204A0101D18491C6943011C295C0100000000 (1C295C:01 is team)
-- Add service messages
+- Add LOWBAT for all devices with batteries
 - Automatically add spy device and central if they don't exist
 - Add parameter for SIM_COUNTER
-- UNREACH for non cyclic_timeout devices
 Today:
 
 Questions:
