--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,7 @@
 - Central: Is configuration sent to device after inserting batteries? / Handle device start up
 - Delete peer from all devices it is linked to, when peer is reset
-- If device support teams, detect teams through peer request on pairing:
-		1374684305216 Received: 0B04A0011C69431D18490103
-		1374684305348 Received: 1204A0101D18491C6943011C295C0100000000 (1C295C:01 is team)
+- _peersMutex and _peersBySerialMutex
+	- Don't work with peer after using peerExists
 Today:
 
 Questions:
