New xml files and Bugfixes

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,12 @@
 - Central: Is configuration sent to device after inserting batteries? / Handle device start up
 - Delete peer from all devices it is linked to, when peer is reset
-- _peersMutex and _peersBySerialMutex
-	- Don't work with peer after using peerExists
-- Check that Homegear features are being deleted when pairing to another device
+- Configuring link paramsets doesn't work for the sender in HomeMatic Configurator
+- Enforcing link parameters does not always work
+- Calculate index and size from mask (support mask)
+
+When AES is working:
+- enforce $PEER.AES
+
 Today:
 
 Questions:
