--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,10 @@
 - Delete peer from all devices it is linked to, when peer is reset
 - put broadcastdeletedevices in thread
+- Find out how HomeMatic configurator grays out buttons
 
 When AES is working:
 - enforce $PEER.AES
+- Check if wake up is working, for the HM-Sec-MDIR it works differently with AES enabled
 
 Today:
 
