--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,10 @@
-- Delete peer from all devices it is linked to, when peer is reset
-
 When AES is working:
 - enforce $PEER.AES
 - Check if wake up is working, for the HM-Sec-MDIR it works differently with AES enabled
+
+Low priority:
+
+- Delete peer from all devices it is linked to, when peer is reset
 
 Today:
 
