logrotate and SIGHUP support

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,6 +1,3 @@
-- Lazy config
-- Why does shutdown take so long?
-
 When AES is working:
 - enforce $PEER.AES
 - Check if wake up is working, for the HM-Sec-MDIR it works differently with AES enabled
@@ -13,3 +10,4 @@ Today:
 
 Questions:
 - AES handshakes
+- Lazy config, what is that?
