--- a/Todo.txt
+++ b/Todo.txt
@@ -1,6 +1,7 @@
 When AES is working:
 - enforce $PEER.AES
 - Check if wake up is working, for the HM-Sec-MDIR it works differently with AES enabled
+- Change ServiceMessages so that all errors are supported.
 
 Low priority:
 
