--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,5 @@
+- init flags: keep alive, binary
+
 When AES is working:
 - enforce $PEER.AES
 - Check if wake up is working, for the HM-Sec-MDIR it works differently with AES enabled
