--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,6 @@
 - RPC Server nur neu starten, wenn config-Dateien geändert
+- Datum in Wandthermostaten irgendwie regelmäßig aktualisieren (Hauptproblem Zeitumstellung)
+- Batterie leer von Rauchmelder testen
 
 When AES is working:
 - enforce $PEER.AES
