--- a/Todo.txt
+++ b/Todo.txt
@@ -1,6 +1,8 @@
 - RPC Server nur neu starten, wenn config-Dateien geändert
-- Datum in Wandthermostaten irgendwie regelmäßig aktualisieren (Hauptproblem Zeitumstellung)
 - Batterie leer von Rauchmelder testen
+
+When devices are available:
+- Test blind_test
 
 When AES is working:
 - enforce $PEER.AES
