--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,5 @@
+- Add prefix to device types received as packet
+- Change devices::find and/or ?::match so that type is checked (HM Wired, HM BidCoS, ...)
 - RPC Server nur neu starten, wenn config-Dateien geändert
 - Batterie leer von Rauchmelder testen
 
