--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,6 @@
 - homegear -p USERNAME to set necessary device permissions for user
 - Use HMWiredCentral as soon as it exists to get unique address in LogicalDevices
+- Revise Metadata storage => currently in BidCoS central
 - Service message when no RF device is reachable for a certain (settable) amount of time
 - RPC Server nur neu starten, wenn config-Dateien geändert
 - Batterie leer von Rauchmelder testen
