GPIO support in PHP

--- a/src/GD/.deps/GD.Po
+++ b/src/GD/.deps/GD.Po
@@ -256,6 +256,7 @@ GD/GD.o: GD/GD.cpp /usr/include/stdc-predef.h GD/GD.h GD/../../config.h \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -986,6 +987,8 @@ GD/../ScriptEngine/php_config_fixes.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
