--- a/src/MQTT/.deps/MQTT.Po
+++ b/src/MQTT/.deps/MQTT.Po
@@ -255,6 +255,7 @@ MQTT/MQTT.o: MQTT/MQTT.cpp /usr/include/stdc-predef.h MQTT/MQTT.h \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -986,6 +987,8 @@ MQTT/MQTT.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
