--- a/src/ScriptEngine/.deps/libscriptengine_a-PhpVariableConverter.Po
+++ b/src/ScriptEngine/.deps/libscriptengine_a-PhpVariableConverter.Po
@@ -259,6 +259,7 @@ ScriptEngine/libscriptengine_a-PhpVariableConverter.o: \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -1047,6 +1048,8 @@ ScriptEngine/../GD/../ScriptEngine/php_config_fixes.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
