--- a/src/UPnP/.deps/UPnP.Po
+++ b/src/UPnP/.deps/UPnP.Po
@@ -255,6 +255,7 @@ UPnP/UPnP.o: UPnP/UPnP.cpp /usr/include/stdc-predef.h UPnP/UPnP.h \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -985,6 +986,8 @@ UPnP/UPnP.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
