--- a/src/Database/.deps/SQLite3.Po
+++ b/src/Database/.deps/SQLite3.Po
@@ -258,6 +258,7 @@ Database/SQLite3.o: Database/SQLite3.cpp /usr/include/stdc-predef.h \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -997,6 +998,8 @@ Database/../GD/../ScriptEngine/php_config_fixes.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
