--- a/src/ScriptEngine/.deps/libscriptengine_a-php_sapi.Po
+++ b/src/ScriptEngine/.deps/libscriptengine_a-php_sapi.Po
@@ -259,6 +259,7 @@ ScriptEngine/libscriptengine_a-php_sapi.o: ScriptEngine/php_sapi.cpp \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -1095,6 +1096,8 @@ ScriptEngine/../GD/../ScriptEngine/php_config_fixes.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
