--- a/src/Systems/.deps/PhysicalInterfaces.Po
+++ b/src/Systems/.deps/PhysicalInterfaces.Po
@@ -256,6 +256,7 @@ Systems/PhysicalInterfaces.o: Systems/PhysicalInterfaces.cpp \
  /usr/include/homegear-base/HelperFunctions/Net.h \
  /usr/include/homegear-base/Exception.h \
  /usr/include/homegear-base/HelperFunctions/Io.h \
+ /usr/include/homegear-base/LowLevel/Gpio.h \
  /usr/include/homegear-base/DeviceDescription/Devices.h \
  /usr/include/homegear-base/Systems/Packet.h \
  /usr/include/homegear-base/Systems/DeviceTypes.h \
@@ -988,6 +989,8 @@ Systems/PhysicalInterfaces.h:
 /usr/include/homegear-base/Exception.h:
 
 /usr/include/homegear-base/HelperFunctions/Io.h:
+
+/usr/include/homegear-base/LowLevel/Gpio.h:
 
 /usr/include/homegear-base/DeviceDescription/Devices.h:
 
